--- a/index.html
+++ b/index.html
@@ -1,22 +1,22 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8"/>
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Simulador de batería</title>
-  <link rel="stylesheet" href="styles.css"/>
-</head>
-<body>
-  <header>
-    <h1></h1>
-  </header>
-  <div class="drum-pad">
-    <button class="drum" id="bombo">Bombo (A)</button>
-    <button class="drum" id="caja">Caja (S)</button>
-    <button class="drum" id="hihat">Hi-Hat (D)</button>
-  </div>
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Simulador de batería</title>
+    <link rel="stylesheet" href="styles.css" />
+  </head>
+  <body>
+    <header>
+      <h1></h1>
+    </header>
+    <div class="drum-pad">
+      <button class="drum" id="bombo">Bombo (A)</button>
+      <button class="drum" id="caja">Caja (S)</button>
+      <button class="drum" id="hihat">Hi-Hat (D)</button>
+      <button class="drum" id="testeo">Testeo</button>
+    </div>
 
-  <script src="scripts.js"></script>
-</body>
-
+    <script src="scripts.js"></script>
+  </body>
 </html>
